--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "npm": ">=4.1"
   },
   "dependencies": {
+    "axios": "^0.13.1",
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
     "bluebird": "^3.5.0",
     "chalk": "^2.3.0",
     "es6-promise": "^4.2.2",
@@ -26,36 +29,35 @@
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.1",
     "lru-cache": "^4.1.1",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-polyfill": "^6.26.0",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.13",
     "vuex": "^3.0.1",
-    "vuex-router-sync": "^5.0.0",
-    "axios": "^0.13.1"
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.1.2",
     "babel-loader": "^7.1.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-stage-2": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
+    "eslint": "^4.19.1",
+    "eslint-plugin-html": "^4.0.3",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.6",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
     "rimraf": "^2.6.2",
-    "semver": "^5.4.1",
-    "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
+    "semver": "^5.4.1",
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.6.2",
     "vue-loader": "^13.6.2",
