--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.13",
     "vuex": "^3.0.1",
-    "vuex-router-sync": "^5.0.0"
+    "vuex-router-sync": "^5.0.0",
+    "weixin-js-sdk": "^1.3.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
