--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "weixin-js-sdk": "^1.3.3"
   },
   "devDependencies": {
+    "autoprefixer": "^9.4.3",
     "babel-core": "^6.26.0",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^7.1.2",
@@ -77,5 +78,13 @@
     "webpack-merge": "^4.1.0",
     "webpack-node-externals": "^1.6.0"
   },
+  "browserslist": [
+    "defaults",
+    "not ie < 11",
+    "last 2 versions",
+    "> 1%",
+    "iOS 6",
+    "last 3 iOS versions"
+  ],
   "license": "MIT"
 }
