--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "node entrance/server.js",
     "start": "cross-env NODE_ENV=production node entrance/server.js",
     "build": "rimraf dist && npm run build:client && npm run build:server",
+    "builddist": "rimraf dist",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
   },
